--- a/public/css/auth/auth.css
+++ b/public/css/auth/auth.css
@@ -101,6 +101,19 @@ body, h2 {
     border-radius: 5px;
 }
 
+.error {
+    color: #e9271e;
+    font-size: 12px;
+}
+
+p.error-message {
+    color: black;
+    background: rgba(255, 0, 0, 0.6);
+    border: 2px solid red;
+    border-radius: 4px;
+    padding: 10px;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 
     .auth-block {
