--- a/public/css/auth/auth.css
+++ b/public/css/auth/auth.css
@@ -20,7 +20,6 @@ body, h2 {
     border: solid 1px #c4c4ca;
     border-radius: 8px;
     padding-left: 10px;
-    width: 100%;
     font-size: 16px;
     box-sizing: border-box;
 }
@@ -53,13 +52,11 @@ body, h2 {
 }
 
 .auth-block .link {
-    width: 48%;
     text-align: center;
 }
 
 .auth-block a {
     display: block;
-    width: 100%;
     line-height: 38px;
     text-decoration: none;
 }
@@ -73,7 +70,9 @@ body, h2 {
 .auth-block div.label,
 .auth-block .fieldset select,
 .auth-block .create-account button,
-.auth-block .signin-button-block button {
+.auth-block .signin-button-block button,
+.auth-block .link, .auth-block .fieldset input,
+.auth-block a {
     width: 100%;
 }
 
@@ -106,12 +105,21 @@ body, h2 {
     font-size: 12px;
 }
 
+.error-messages {
+    position: absolute;
+    z-index: 1;
+}
+
 p.error-message {
     color: black;
-    background: rgba(255, 0, 0, 0.6);
+    background: #e9271e;
     border: 2px solid red;
     border-radius: 4px;
     padding: 10px;
+}
+
+button[type='submit'] {
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
@@ -129,7 +137,6 @@ p.error-message {
     }
 
     .auth-block .link {
-        width: 100%;
         margin-bottom: 10px;
     }
 
