--- a/public/css/auth/signin.css
+++ b/public/css/auth/signin.css
@@ -1,31 +1,39 @@
 .wrapper {
-    width: 36%;
     margin-left: 32%;
     margin-right: 32%;
-    position: absolute;
-    top: 50%;
+}
+
+.error-messages, .auth-block {
+    width: 36%;
 }
 
 .auth-block {
     background-color: #ffff;
     font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif;
     font-size: 19px;
-    position: relative;
     margin-top: -200px;
+    position: absolute;
+    top: 50%;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
     .wrapper {
-        width: 90%;
         margin-left: 5%;
         margin-right: 5%;
+    }
+
+    .auth-block, .error-messages {
+        width: 90%;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
     .wrapper {
-        width: 62%;
         margin-left: 19%;
         margin-right: 19%;
+    }
+
+    .auth-block, .error-messages {
+        width: 62%;
     }
 }
