--- a/public/css/auth/signin.css
+++ b/public/css/auth/signin.css
@@ -16,6 +16,10 @@
     top: 50%;
 }
 
+#remember {
+    width: auto;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 767px) {
     .wrapper {
         margin-left: 5%;
