--- a/public/css/profile/index.css
+++ b/public/css/profile/index.css
@@ -162,3 +162,11 @@ footer {
     padding-top: 20px;
     margin-top: 16px;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+
+}
