--- a/public/css/profile/settings.css
+++ b/public/css/profile/settings.css
@@ -12,7 +12,7 @@
     padding-right: 15px;
 }
 
-.right-col {
+.right-col, section.content .title h1 {
     margin-left: 15px;
 }
 
@@ -39,4 +39,28 @@ hr {
 
 .fieldset .label {
     margin-bottom: 5px;
+}
+
+section.content .title {
+    padding-top: 1px;
+}
+
+.bottom-row {
+    position: relative;
+}
+
+.bottom-row button {
+    position: absolute;
+    right: 0;
+    margin-right: 15px;
+    width: 94px;
+}
+
+.primary-button {
+    padding: 10px;
+    font-size: 16px;
+    background-color: #8290f7;
+    color: white;
+    border: none;
+    box-shadow: inset 0 0 10px #8e8787;
 }
