--- a/public/css/profile/settings.css
+++ b/public/css/profile/settings.css
@@ -65,3 +65,11 @@ section.content .title {
     box-shadow: inset 0 0 10px #8e8787;
     cursor: pointer;
 }
+
+p.error-message {
+    color: black;
+    background: #e9271e;
+    border: 2px solid red;
+    border-radius: 4px;
+    padding: 10px;
+}
