--- a/public/css/profile/index.css
+++ b/public/css/profile/index.css
@@ -167,6 +167,11 @@ footer {
     margin-top: 16px;
 }
 
+.error {
+    color: #e9271e;
+    font-size: 12px;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 
     body {
