--- a/public/css/profile/settings.css
+++ b/public/css/profile/settings.css
@@ -56,14 +56,17 @@ section.content .title {
     width: 94px;
 }
 
-.primary-button {
+.button {
     padding: 10px;
     font-size: 16px;
-    background-color: #8290f7;
     color: white;
     border: none;
     box-shadow: inset 0 0 10px #8e8787;
     cursor: pointer;
+}
+
+.primary-button {
+    background-color: #8290f7;
 }
 
 p.success-message, p.error-message {
