add home page to menu bar, bugfix with country, region, city select fields, add year counter, bugfix with store and auto filling sign up form data, add back button for settings page, add asterisks for required fields in forms

--- a/public/css/auth/auth.css
+++ b/public/css/auth/auth.css
@@ -100,8 +100,11 @@ body, h2 {
     border-radius: 5px;
 }
 
-.error {
+.error, .required-field-asterisk {
     color: #e9271e;
+}
+
+.error {
     font-size: 12px;
 }
 
